--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,4 +1,108 @@
+.header{
+    background-color:$color-primary;
+    padding: 1.2rem 1.1rem 1.2rem 1rem;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    &__menu{
+        width: 1.5rem;
+        height: 1.3rem;
+    }
+}
 .hero{
     background-image: url("../images/cover.jpeg");
-    height: 100vh;
+    width: 100%;
+    height: 65rem;
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: 85%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__article{
+        display: inline-block;
+        display: flex;
+        width: 25rem;
+        flex-direction: column;
+        align-items: center;
+        transform: translateY(80%);
+    &--title{
+        font-size: 3rem;
+        font-family: $font-title;
+        color: $color-third;
+        text-transform: uppercase;
+        flex-direction: column;
+    } 
+        &--text{
+        margin-top:2rem;
+        color: $color-third;
+        font-family: $font-texts;
+        font-size: 1.6rem;
+        } 
+    }
+&__icon{
+background-color: $color-third;
+display: flex;
+align-items: center;
+justify-content: center;
+width: 3.8rem;
+height: 3.8rem;
+border-radius: 50%;
+margin-top: 2rem;
+    &--fig{
+        width: 1.7rem;
+        height: 1rem;
+    }
+  }  
+}
+.sectionone{
+  margin-left:1.3rem;
+  margin-right: 1.7rem;
+    &__text{
+       font-size: 1.4rem;
+       color: $color-primary;
+       text-transform: uppercase;
+       font-family: $font-texts;
+       margin-top: 3.4rem;
+    }
+    &__title{
+        font-size: 2.2rem;
+        color: $color-titles;
+        text-transform: uppercase;
+        font-family: $font-title;
+        margin-top: 0.5rem;
+    }
+    &__deport{
+        font-size: 1.8rem;
+        color: $color-footer;
+        font-family: $font-texts;
+        margin-top: 1.5rem;
+    }
+&__button{
+    margin-top: 5rem;
+    width: 16rem;
+    height: 4.5rem;
+    font-family: $font-texts;
+    font-size: 2rem;
+    color: $color-primary;
+    background-color: $color-third;
+    }
+}
+.sectiontwo{
+    background-color: $color-secundary;
+    &__articles{
+        &--school{
+            border-radius: 50%;
+            width: 11.4rem;
+        }
+        &--case{
+            border-radius: 50%;
+            width: 11.4rem;
+        }
+        &--deport{
+            border-radius: 50%;
+            width: 11.4rem;
+        }
+    }
 }
