update mobile version

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,7 +1,8 @@
 $color-primary: #6c933e;
 $color-secundary:#d9e4cc;
 $color-third:#ffffff;
-$color-footer: ·#4a4a4a;
+$color-fourth:#626262;
+$color-footer:#4a4a4a;
 $color-titles: #000000;
 $font-title:'Roboto Slab', serif;
 $font-texts: 'Roboto', sans-serif;
