--- a/src/scss/layout/_section-one.scss
+++ b/src/scss/layout/_section-one.scss
@@ -20,6 +20,7 @@
           color: $color-footer;
           font-family: $font-texts;
           margin-top: 1.5rem;
+          line-height: 2;
       }
   &__button{
       margin-top: 5rem;
