--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,46 +1,63 @@
 .hero{
     background-image: url("../images/cover.jpeg");
-    width: 100%;
-    height: 65rem;
+    width: 100vw;
+    height: 100vh;
     background-size:cover;
     background-repeat: no-repeat;
     background-position: 85%;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    @media all and (min-width:768px){
+        background-position: 90%;
+    }
+
     &__article{
-        display: inline-block;
         display: flex;
         width: 25rem;
         flex-direction: column;
         align-items: center;
-        transform: translateY(80%);
+        transform: translateY(55%);
+        @media all and (min-width:768px){
+            
+        }
+
     &--title{
         font-size: 3rem;
         font-family: $font-title;
         color: $color-third;
         text-transform: uppercase;
         flex-direction: column;
+        line-height: 1.5;
+
+        @media all and (min-width:768px){
+            font-size: 7.5rem;
+            line-height:1;
+        }
     } 
-        &--text{
-        margin-top:2rem;
+    &--text{
         color: $color-third;
         font-family: $font-texts;
         font-size: 1.6rem;
+
+        @media all and (min-width:768px){
+            font-size: 2.4rem;
+            }
         } 
     }
-&__icon{
-background-color: $color-third;
-display: flex;
-align-items: center;
-justify-content: center;
-width: 3.8rem;
-height: 3.8rem;
-border-radius: 50%;
-margin-top: 2rem;
-    &--fig{
-        width: 1.7rem;
-        height: 1rem;
-    }
-  }  
+
+    &__icon{
+    background-color: $color-third;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 3.8rem;
+    height: 3.8rem;
+    border-radius: 50%;
+    margin-top: 2rem;
+    :hover {
+        transform: scale(0.9);
+    }    
+  }
 }
