--- a/src/scss/layout/_section-two.scss
+++ b/src/scss/layout/_section-two.scss
@@ -2,6 +2,8 @@
     background-color: $color-secundary;
     display: grid;
     place-content: center;
+    gap: 1.5rem;
+    text-align: center;
     &__text{
         font-size: 1.2rem;
         font-family: $font-title;
@@ -16,12 +18,14 @@
     }
 
     &__articles{
-        
+        display: grid;
+        place-content: center;
+        gap: 1rem;
         &--img{
             border-radius: 50%;
             width: 11.4rem;
             margin-top: 1.2rem;
-            box-shadow: 0.1rem 0.2rem $color-fourth;
+            box-shadow: 0 0.4rem 0.4rem 0 $color-fourth;
         }
         &--description{
             font-size: 1.4rem;
@@ -39,11 +43,10 @@
         color: $color-third;
         background-color: $color-primary;
         border-radius: 3rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        :hover{
-            transform: scale(0.10);
+        text-align: center;
+        padding-top: 1rem;
+        :hover {
+            transform: scale(0.9);
         }
     }
 }
