--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -9,18 +9,18 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    @media all and (min-width:768px){
-        background-position: 90%;
-    }
 
     &__article{
+        width: 25rem;
         display: flex;
         width: 25rem;
         flex-direction: column;
         align-items: center;
         transform: translateY(55%);
+
         @media all and (min-width:768px){
-            
+            width: 30rem;
+            transform: translateY(30%);
         }
 
     &--title{
@@ -52,6 +52,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    align-content: center;
     width: 3.8rem;
     height: 3.8rem;
     border-radius: 50%;
