--- a/src/scss/layout/_section-two.scss
+++ b/src/scss/layout/_section-two.scss
@@ -1,52 +1,67 @@
 .container{
     background-color: $color-secundary;
-    display: grid;
-    place-content: center;
     gap: 1.5rem;
     text-align: center;
+    height: 66rem;
+    @media all and (min-width:768px){
+        height: 41rem;
+    }
     &__text{
         font-size: 1.2rem;
         font-family: $font-title;
         color: $color-fourth;
-        margin-top: 2rem;
+        padding-top: 2rem;
     }
 
     &__title{
         font-size: 2rem;
         font-family: $font-title;
         text-transform: uppercase;
+        padding-top: 1rem;
+        @media all and (min-width:768px){
+            font-size: 2.8rem;
+        }
     }
 
     &__articles{
         display: grid;
         place-content: center;
         gap: 1rem;
+        padding-top: 2.5rem;
+        margin-bottom: 3.5rem;
+
+        @media all and (min-width:768px){
+            grid-template-columns: repeat(3, 1fr);
+            gap:8rem;
+            margin-bottom: 6rem;
+        }
         &--img{
             border-radius: 50%;
             width: 11.4rem;
-            margin-top: 1.2rem;
             box-shadow: 0 0.4rem 0.4rem 0 $color-fourth;
         }
         &--description{
             font-size: 1.4rem;
             font-family: $font-title;
+            margin-top: 0.5rem;
+            @media all and (min-width:768px){
+                font-size: 1.8rem;
+            }
         }   
     }
 
     &__buttontwo{
-        margin-top: 5rem;
-        margin-bottom: 5rem;
         width: 18.4rem;
         height: 4.7rem;
         font-family:$font-texts;
         font-size: 2rem;
         color: $color-third;
         background-color: $color-primary;
+        padding: 1.5rem;
         border-radius: 3rem;
-        text-align: center;
-        padding-top: 1rem;
-        :hover {
-            transform: scale(0.9);
-        }
+        margin-top: 5rem;
+        // :hover {
+        // transform: scale(0.9);
+        // }
     }
 }
