--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,6 +1,5 @@
 .hero{
     background-image: url("../images/cover.jpeg");
-    width: 100vw;
     height: 100vh;
     background-size:cover;
     background-repeat: no-repeat;
@@ -21,6 +20,11 @@
         @media all and (min-width:768px){
             width: 30rem;
             transform: translateY(30%);
+        }
+        @media all and (min-width:1280px){
+            width: 80rem;
+            transform: translateY(30%);
+            transform: translateY(50%);
         }
 
     &--title{
