--- a/src/scss/layout/_section-one.scss
+++ b/src/scss/layout/_section-one.scss
@@ -2,10 +2,14 @@
     margin-left:1.3rem;
     margin-right: 1.7rem;
 
-    @media all and (min-width:768px){
-        margin-left:3.7rem;
-        margin-right: 3.9rem;
-    }
+      @media all and (min-width:768px){
+         margin-left:3.7rem;
+         margin-right: 3.9rem;
+      }
+      @media all and (min-width:1280px){
+        margin-left:17rem;
+        margin-right: 16.8rem;
+     }
       &__text{
          font-size: 1.4rem;
          color: $color-primary;
@@ -38,6 +42,10 @@
           @media all and (min-width:768px){
             font-size: 2rem;
             width: 69rem;
+          }
+          @media all and (min-width:768px){
+            font-size: 2rem;
+            width: 100rem;
           }
       }
   &__button{
