--- a/src/scss/layout/_section-two.scss
+++ b/src/scss/layout/_section-two.scss
@@ -6,6 +6,10 @@
     @media all and (min-width:768px){
         height: 41rem;
     }
+    @media all and (min-width: 1280px){
+        padding-left: 10rem;
+        padding-right: 10rem;
+    }
     &__text{
         font-size: 1.2rem;
         font-family: $font-title;
@@ -27,12 +31,11 @@
         display: grid;
         place-content: center;
         gap: 1rem;
-        padding-top: 2.5rem;
+        margin-top: 2.5rem;
         margin-bottom: 3.5rem;
 
-        @media all and (min-width:768px){
+        @media all and (min-width: 768px){
             grid-template-columns: repeat(3, 1fr);
-            gap:8rem;
             margin-bottom: 6rem;
         }
         &--img{
@@ -60,8 +63,5 @@
         padding: 1.5rem;
         border-radius: 3rem;
         margin-top: 5rem;
-        // :hover {
-        // transform: scale(0.9);
-        // }
     }
 }
