--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,12 +1,10 @@
+a{
+    color: $color-third;
+}
 .footer{
     background-color:$color-footer;
     height: 43rem;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    @media all and (min-width:768px) {
+    @media all and (min-width:768px){
         height: 24rem;
     }
     
@@ -15,7 +13,7 @@
         height: 4.5rem;
         border-radius: 50%;
         background-color: $color-third;
-        transform:translateY(-130%);
+        transform: translate(455%,-50%);  
         display: flex;
         justify-content: center;
         align-items: center;
@@ -25,40 +23,48 @@
             transform: scale(0.9);
         }
         @media all and (min-width:768px) {
-            transform:translateY(-80%);
+            transform: translate(800%,-50%); 
         }
     }
+
     &__span{
         font-family: $font-texts;
         font-size: 1.6rem;
         text-transform: uppercase;
         line-height: 3rem;
-        @media all and (min-width:768px){
-            display: flex;
-            flex-direction: row-reverse;
-            align-items: baseline;
-            gap: 8rem;
-            &--articles{
-                order: 2;  
-            &--networks{
-                order: 3;  
+        text-align: center;
+
+        &--nav{
+            @media all and (min-width:768px){
+                display: flex;
+                flex-direction: row-reverse;
+                justify-content: center;
+                align-content: baseline;
+                gap: 15rem;
             }
-            }   
+            @media all and (min-width:1280px){
+                gap:30rem;
+            }
+            &--articles{
+                margin-top: 2rem;
+                order:1;
+            }
+            &--networks{
+                margin-top: 2rem;
+                order:1;
+            }
         }
-    
+
         &--copy{
             font-size: 1.4rem;
             font-family: $font-texts;
             color: $color-third;
             line-height: 3rem;
-            margin-top: 1rem;
             order: 1;
+            margin-top: 2rem;
             &--heart{
                 color:$color-primary;
             }
-        }
-    } 
-}
-a{
-    color: $color-third;
+        }  
+    }
 }
