--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -2,12 +2,12 @@
     background-image: url("../images/cover.jpeg");
     height: 100vh;
     background-size:cover;
+    background-repeat: no-repeat;
     background-position: 85%;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding-right: 3.8rem;
 
     &__article{
         width: 25rem;
@@ -19,12 +19,9 @@
 
         @media all and (min-width:768px){
             width: 30rem;
-            transform: translateY(30%);
         }
         @media all and (min-width:1280px){
             width: 80rem;
-            transform: translateY(30%);
-            transform: translateY(50%);
         }
 
     &--title{
