added new version grid

--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -8,7 +8,7 @@
       <a href="#school"
         ><img
           class="hero__icon--fig"
-          src="../assets/images/ico-scroll-down.svg"
+          src="./assets/images/ico-scroll-down.svg"
           alt="icono de bajar"
           title="Ir abajo"
       /></a>
