--- a/src/html/partials/section-two.html
+++ b/src/html/partials/section-two.html
@@ -1,36 +1,37 @@
 <section class="container">
     <p class="container__text">¡Prepáralos con tus marcas favoritas!</p>
     <h2 class="container__title" id="school">vuelta al cole</h2>
+    
     <ul class="container__articles">
-      <li>
+      <li class="school">
         <img
-          class="container__articles--img"
-          src="../assets/images/lpbts-mod05-img01-desk.png"
+          class="img"
+          src="./assets/images/lpbts-mod05-img01-desk.png"
           alt=""
         />
-        <p class="container__articles--description">Mochilas escolares</p>
+        <p class="description">Mochilas escolares</p>
       </li>
-      <li>
+      <li class="case">
         <img
-          class="container__articles--img"
-          src="../assets/images/lpbts-mod05-img04-mob.png"
+          class="img"
+          src="./assets/images/lpbts-mod05-img04-mob.png"
           alt=""
         />
-        <p class="container__articles--description">Estuches</p>
+        <p class="description">Estuches</p>
       </li>
-      <li>
+      <li class="bagdeport">
         <img
-          class="container__articles--img"
-          src="../assets/images/lpbts-mod05-img03-mob.png"
+          class="img"
+          src="./assets/images/lpbts-mod05-img03-mob.png"
           alt=""/>
-        <p class="container__articles--description">Bolsa de deporte</p>
+        <p class="description">Bolsa de deporte</p>
       </li>
     </ul>
 
     <a href="#hero" class="container__buttontwo">Empezar ahora</a>
     <div class="container__arrowup">
       <a href="#hero"
-        ><img src="../assets/images/ico-arrow.svg" alt="Ir arriba" title="Ir arriba"
+        ><img src="./assets/images/ico-arrow.svg" alt="Ir arriba" title="Ir arriba"
       /></a>
     </div>
   </section>
