--- a/src/html/partials/section-one.html
+++ b/src/html/partials/section-one.html
@@ -1,10 +1,11 @@
 <section class="sectionone">
-    <p class="sectionone__text">historias, moda y ropa deportiva</p>
-    <h2 class="sectionone__title">tu tienda de deporte</h2>
-    <p class="sectionone__deport">
-      El deporte nos mantiene en forma. Nos mantiene alerta Nuestra ropa
-      deportiva para hombre y mujer te ofrece las últimas tecnologías, a la
-      altura de tu rendimiento, para que superes tu mejor marca personal.
-    </p>
-    <button class="sectionone__button">Comprar</button>
-  </section>
+  <p class="sectionone__text">historias, moda y ropa deportiva</p>
+  <h2 class="sectionone__title">tu tienda de deporte</h2>
+  <p class="sectionone__deport">
+    El deporte nos mantiene en forma. Nos mantiene alerta Nuestra ropa deportiva
+    para hombre y mujer te ofrece las últimas tecnologías, a la altura de tu
+    rendimiento, para que superes tu mejor marca personal.
+  </p>
+
+  <a href="#hero" class="sectionone__button">Comprar</a>
+</section>
