--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -18,9 +18,11 @@
         transform: translateY(55%);
 
         @media all and (min-width:768px){
+            transform: translateY(20%);
             width: 30rem;
         }
         @media all and (min-width:1280px){
+            transform: translateY(55%);
             width: 80rem;
         }
 
