--- a/src/scss/layout/_section-two.scss
+++ b/src/scss/layout/_section-two.scss
@@ -15,7 +15,7 @@
         font-size: 1.2rem;
         font-family: $font-title;
         color: $color-fourth;
-        padding-top: 2rem;
+        margin-top:3rem;
         grid-row: 1/1;
         @media all and (min-width:768px){
             grid-column: 1/4;
@@ -26,7 +26,7 @@
         font-size: 2rem;
         font-family: $font-title;
         text-transform: uppercase;
-        padding-top: 1rem;
+        margin-top: 3rem;
         grid-row: 2/2;
         @media all and (min-width:768px){
             grid-column: 2/2;
@@ -35,6 +35,7 @@
     }
     &__articles{
         grid-row: 3/3;
+        margin-top: 3rem;
         @media all and (min-width:768px){
             grid-column: 1/4;
             grid-rows: 3/3;
@@ -71,9 +72,16 @@
         color: $color-third;
         background-color: $color-primary;
         padding: 1.5rem;
+        margin-top: 3rem;
         border-radius: 3rem;     
         grid-row: 4/4;
         justify-self: center;
+        a{
+            color: $color-third;
+        }
+        :hover {
+            transform: scale(0.9);
+            }
         @media all and (min-width:768px){
             grid-column: 2/2;
             grid-row: 4/4;
@@ -86,9 +94,14 @@
         background-color: $color-third;
         justify-self: center;
         padding-top: 1rem;
+        margin-top: 2.5rem;
         box-shadow: 0 0.4rem 0.4rem $color-titles;
         grid-row: 5/5;
+        :hover {
+            transform: scale(0.9);
+            }
         @media all and (min-width:768px){
+            margin-top: 7.5rem;
             grid-column: 2/2;
             grid-row: 5/5;
         }
